Fixes body height on small screens

--- a/www/main.css
+++ b/www/main.css
@@ -61,4 +61,5 @@ md-content {
 
 body {
   background-color: #fdf6e3;
+  min-height: 530px;
 }
